update function app  and add authors in docs

--- a/docs/cloud/azure/azure-sql.mdx
+++ b/docs/cloud/azure/azure-sql.mdx
@@ -1,5 +1,19 @@
 ---
 sidebar_position: 3
+description: Azure SQL
+tags:
+  - sql
+  - database
+  - serverless
+  - Azure
+keywords:
+  - sql
+  - database
+  - serverless
+  - Azure
+last_update:
+  date: 2025/09/01 GMT+8
+  author: ShigureDD
 ---
 
 # Azure SQL
