--- a/docs/cloud/azure/api-management-service.mdx
+++ b/docs/cloud/azure/api-management-service.mdx
@@ -1,5 +1,18 @@
 ---
 sidebar_position: 1
+description: Azure API Management services
+author: ShigureDD
+tags:
+  - API Gateway
+  - API Management
+  - Azure
+keywords:
+  - Gateway
+  - API
+  - Azure
+last_update:
+  date: 2025/09/01 GMT+8
+  author: ShigureDD
 ---
 
 # Azure API Management services
