--- a/docs/cloud/azure/app-service.mdx
+++ b/docs/cloud/azure/app-service.mdx
@@ -1,5 +1,18 @@
 ---
 sidebar_position: 2
+description: Azure Web App services
+author: ShigureDD
+tags:
+  - web app
+  - serverless
+  - Azure
+keywords:
+  - web app
+  - serverless
+  - Azure
+last_update:
+  date: 2025/09/01 GMT+8
+  author: ShigureDD
 ---
 
 # Web App
