add potplayer blog-1

--- a/docs/cloud/azure/function-app-cron-job.mdx
+++ b/docs/cloud/azure/function-app-cron-job.mdx
@@ -58,6 +58,6 @@ public static void Run(TimerInfo myTimer, TraceWriter log)
 ```
 
 
-## Reference
-[Run executable file in Azure](https://stackoverflow.com/questions/45348498/run-exe-executable-file-in-azure-function)
+### Reference
+[Run executable file in Azure](https://stackoverflow.com/questions/45348498/run-exe-executable-file-in-azure-function)\
 [cron cheat sheet](https://arminreiter.com/2017/02/azure-functions-time-trigger-cron-cheat-sheet/)
