--- a/docs/react/shadcnUI.mdx
+++ b/docs/react/shadcnUI.mdx
@@ -20,7 +20,7 @@ This is a collection of examples showing how to:
 
 ## Getting Started
 
-Check out the [Components](/docs/components) section to see examples of shadcn-ui components in action. Each example demonstrates different aspects of the component library, from simple buttons to complex interactive UIs.
+Check out the [Components](https://ui.shadcn.com/docs/components) section to see examples of shadcn-ui components in action. Each example demonstrates different aspects of the component library, from simple buttons to complex interactive UIs.
 
 Here's a quick example of a shadcn-ui card component:
 
