--- a/docs/cloud/azure/app-service.mdx
+++ b/docs/cloud/azure/app-service.mdx
@@ -15,9 +15,10 @@ last_update:
   author: ShigureDD
 ---
 
-# Web App
+# Azure Web App
 
-Azure Web App
+PaaS service for hosting web apps, mobile app back ends, RESTful APIs, or automated business processes.
+IIS as a service when choose Windows plan to host web app.
 
 ##Environment variable
 
